--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 5% auto;
     background: #ffffff;
     color: #444444;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Garamon (serif)", Roboto, Helvetica, Arial, sans-serif;
     line-height: 1.8;
     max-width: 48em;
 }
